--- a/ensayo/nuoct/analisis/1-orbitas/orbitas.ipynb
+++ b/ensayo/nuoct/analisis/1-orbitas/orbitas.ipynb
@@ -108,6 +108,30 @@
     "    plt.tight_layout()\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a1c1d25e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#Acá voy a hacer que la imagen se guarde en un archivo PNG\n",
+    "plt.savefig(\"orbitas_nu_octantis.png\", dpi=300)"
+   ]
   }
  ],
  "metadata": {
