--- a/ensayo/nuoct/analisis/2-estabilidad/estabilidad.ipynb
+++ b/ensayo/nuoct/analisis/2-estabilidad/estabilidad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ebe69bfc",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "<>:8: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:8: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "/tmp/ipykernel_21842/4147344691.py:8: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "/tmp/ipykernel_100518/4147344691.py:8: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  data = pd.read_csv(filename, sep='\\s+', header=None)\n"
      ]
     },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b220d0c1",
    "metadata": {},
    "outputs": [
@@ -231,23 +231,7 @@
      "output_type": "stream",
      "text": [
       "Archivo leído con 11 columnas y 102 filas (filas ~ cuerpos).\n",
-      "Asumido formato: time, ID, a, e, I, M, w, Omega, MEGNO, Delta_a, Delta_e\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:16: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "<>:16: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "/tmp/ipykernel_21842/1927938000.py:16: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  df = pd.read_csv(sio, sep='\\s+', header=None, engine='python')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Asumido formato: time, ID, a, e, I, M, w, Omega, MEGNO, Delta_a, Delta_e\n",
       "Partículas detectadas: 100 (IDs > 2)\n",
       "\n",
       "Resumen (primeras filas) de partículas:\n",
@@ -295,6 +279,16 @@
       " 20 1.516900 0.000000 10.000000\n",
       " 21 1.531100 0.000000 10.000000\n",
       " 22 1.545300 0.000000 10.000000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:16: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "<>:16: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "/tmp/ipykernel_100518/1927938000.py:16: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "  df = pd.read_csv(sio, sep='\\s+', header=None, engine='python')\n"
      ]
     },
     {
@@ -441,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3985d0b0",
    "metadata": {},
    "outputs": [
@@ -457,7 +451,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21842/3400612666.py:23: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "/tmp/ipykernel_100518/3400612666.py:23: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
       "  df = pd.read_csv(sio, delim_whitespace=True, header=None, comment='!')\n"
      ]
     },
@@ -683,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cd615b10",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1189,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21842/2192513905.py:125: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "/tmp/ipykernel_100518/2192513905.py:125: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  a.legend()\n"
      ]
     },
@@ -1475,6 +1469,45 @@
     "if megno_summary is not None:\n",
     "    megno_summary.to_csv('megno_summary.csv', index=False)\n",
     "    print('Resumen MEGNO guardado en megno_summary.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6f27e047",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se encontraron 0 partículas estables. Guardadas en stable_particles.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Detecto aquellas particulas que hayan quedado en órbitas estables\n",
+    "# (MEGNO final < 2.5 y Δe máximo < 0.2) y las guardo en un archivo separado.\n",
+    "\n",
+    "if megno_summary is not None:\n",
+    "    stable_particles = megno_summary[\n",
+    "        (megno_summary['is_particle']) &\n",
+    "        (megno_summary['MEGNO_final'] < 2.5) &\n",
+    "        (megno_summary['Delta_e_max'] < 0.2)\n",
+    "    ]\n",
+    "    stable_particles.to_csv('stable_particles.csv', index=False)\n",
+    "    print(f'Se encontraron {len(stable_particles)} partículas estables. Guardadas en stable_particles.csv')\n",
+    "\n",
+    "# Ahora ploteo las órbitas de estas partículas estables en un diagrama a vs e.\n",
+    "if not stable_particles.empty:\n",
+    "    df_stable = df_time[df_time['ID'].isin(stable_particles['ID'])]\n",
+    "    plt.figure(figsize=(9,7))\n",
+    "    plt.scatter(df_stable['a'], df_stable['e'], c='g', s=50, edgecolor='k', alpha=0.7)\n",
+    "    plt.xlabel('a [AU]')\n",
+    "    plt.ylabel('e')\n",
+    "    plt.title('Órbitas de partículas estables (a vs e)')\n",
+    "    plt.grid(alpha=0.3)\n",
+    "    plt.savefig(\"stable_particles_orbits.png\", dpi=300)"
    ]
   }
  ],
