--- a/ensayo/nuoct/analisis/3-evtidal/evtidal.ipynb
+++ b/ensayo/nuoct/analisis/3-evtidal/evtidal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "9baffd97",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "<>:22: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:22: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "/tmp/ipykernel_21872/3967343296.py:22: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "/tmp/ipykernel_100760/3967343296.py:22: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  data = pd.read_csv(planet_file, sep='\\s+', header=None, comment='#')\n"
      ]
     },
@@ -363,6 +363,49 @@
     "        fig_detail, data = plot_tidal_effects_detailed(pfile, f\"Nu Oct {planet_num}\")\n",
     "        analyze_tidal_timescales(pfile)\n",
     "        print(\"-\" * 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7c039cb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "72f72099",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Figura detallada del Planeta 1 guardada en plots/tidal_analysis_Nu_Oct_1.png\n",
+      "Figura detallada del Planeta 2 guardada en plots/tidal_analysis_Nu_Oct_2.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Acá guardo todos los graficos generados como PNG en la carpeta 'plots'\n",
+    "\n",
+    "# Crear la carpeta 'plots' si no existe\n",
+    "if not os.path.exists('plots'):\n",
+    "    os.makedirs('plots')\n",
+    "\n",
+    "# Guardar la figura del sistema completo\n",
+    "if 'fig_system' in locals():\n",
+    "    fig_system.savefig('plots/nuoct_system_evolution.png', dpi=300, bbox_inches='tight')\n",
+    "\n",
+    "# Guardar las figuras detalladas de cada planeta\n",
+    "for planet_num in planets_data.keys():\n",
+    "    fig_name = f'plots/tidal_analysis_Nu_Oct_{planet_num}.png'\n",
+    "    if os.path.exists(fig_name):\n",
+    "        print(f'Figura detallada del Planeta {planet_num} guardada en {fig_name}')\n"
    ]
   }
  ],
