terminamos los códigos

--- a/ensayo/informe/informe.tex
+++ b/ensayo/informe/informe.tex
@@ -43,7 +43,7 @@
 \small Instituto de Astronomía Teórica y Experimental (IATE), CONICET-UNC \\
 \small Córdoba, Argentina \\
 \small \texttt{ruben.sandez@unc.edu.ar}}
-
+\date{\today}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Documento
